policies/tests/require-security-categorization/resource-fail.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-bad
  labels:
    istio-injection: enabled
    sre.io/team: "team-bad"
    # Missing sre.io/security-categorization label
