policies/tests/require-security-categorization/resource-pass.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-alpha
  labels:
    istio-injection: enabled
    sre.io/security-categorization: "moderate"
    sre.io/team: "team-alpha"
